Fixed white space

--- a/react-app/src/components/SelectCoderForProject/SelectCoderForProject.css
+++ b/react-app/src/components/SelectCoderForProject/SelectCoderForProject.css
@@ -106,6 +106,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    min-height: 725px;;
     /* border-color: green;
     border-style: solid; */
 }
